# Plainchat

./: .example.env  .gitignore  LICENSE  README.md  docker-compose.yaml
nginx/: Dockerfile  nginx.conf
plainchat-client/: Dockerfile  package-lock.json  package.json  tsconfig.json
plainchat-client/app/: globals.css  layout.tsx  page.tsx
plainchat-client/app/auth/: layout.tsx  page.tsx
plainchat-client/app/auth/login/: page.tsx
plainchat-client/app/auth/logout/: page.tsx
plainchat-client/app/auth/signup/: page.tsx
plainchat-client/app/chat/: contexts.ts  layout.tsx  page.tsx
plainchat-client/app/chat/[group_id]/: page.tsx
plainchat-client/app/lib/: globals.ts  token.ts
plainchat-client/app/ui/: authForm.tsx  colors.tsx  groupItem.tsx  groupItems.tsx  inputLabel.tsx  inputs.tsx  messageItem.tsx  modal.tsx  submitButton.tsx
plainchat-server/: Cargo.toml  Dockerfile
plainchat-server/migrations/: 1_users.sql  2_groups.sql  3_messages.sql  4_user_groups.sql
plainchat-server/src/: auth_extractor.rs  error.rs  main.rs  models.rs  routes.rs  seed.rs  util.rs  ws.rs
plainchat-server/src/routes/: group.rs  user.rs
plainchat-server/src/util/: pass_hash.rs  redis_store.rs  sqlx_ext.rs
